--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'GR'
 - !lcsh 'Folklore -- England -- Cheshire'
+- GITenberg
 tableOfContents: 'The legend of Coombs Rocks -- The legend of Alman''s death: a tale
   of Melandra Castle -- King Arthur''s adventure -- The legend of War Hill -- Sir
   Ro, of Staley Hall -- Robin Hood''s visit to Longdendale -- The Abbot of Basingwerke,
